test/scc/expr/semantic-errors/135.a
135.t:3:30: error: undeclared identifier 'y'